tests/integration/features/sdoc/document_grammar/validation/32_non_composite_node_declared_in_grammar_but_composite_is_True/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output/ | filecheck %s --dump-input=fail

CHECK: error: could not parse file: {{.*}}input.sdoc.
CHECK: Semantic error: The non-composite node's grammar element is declared as composite: [[REQUIREMENT]].
CHECK: Location: {{.*}}input.sdoc:17:1
